--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+configurations {
+    embed
+    compile.extendsFrom(embed)
+}
 allprojects {
     repositories {
         maven { url 'https://jitpack.io' }
@@ -56,8 +60,11 @@ dependencies {
     //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
     //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
     compile fileTree(dir: 'lib', include: ['*.jar'])
+    embed fileTree(dir: 'lib', include: ['*.jar'])
 }
-
+jar {
+    from configurations.embed.collect { it.isDirectory() ? it : zipTree(it) }
+}
 processResources {
     // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
